Pointing to new file locations